Refactor CORS configuration in CorsConfig.java
Removed WebMvcConfigurer implementation and adjusted CORS configuration method.